css/jisho.css
html,
body {
    min-height: 100%;
}

body {
    background-color: var(--color-bg);
    color: var(--color-text);
    font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", "Noto Japanese", "Roboto", sans-serif;
    overflow-y: scroll;
    overflow-x: hidden;
}

a:link,
a:active,
a:visited {
    color: var(--color-link);
    text-decoration: none;
}

a:hover {
    color: var(--color-link-hover);
}

nav .container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    max-width: 600px;
    width: 100%;
    margin: 0 auto;
    overflow: hidden;
    padding: 1em 0;
}

nav .container div {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
}

nav .container img {
    display: inline-block;
    height: 32px;
}

nav .container h1 {
    display: inline-block;
    font-size: 18px;
    font-family: Roboto, sans-serif;
    margin: 0 0.5em;
}

.update-banner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
    max-width: 600px;
    width: 100%;
    margin: 0 auto 1em;
    padding: 0.85em 1em;
    box-sizing: border-box;
    background-color: var(--color-surface);
    color: var(--color-text);
    border-left: 4px solid var(--color-accent);
    border-radius: 4px;
    box-shadow: 0px 2px 4px 0px var(--color-shadow);
    font-size: 14px;
    line-height: 1.5;
}

.update-banner-text {
    margin-right: 0.75em;
}

.update-banner-close {
    -ms-flex-negative: 0;
        flex-shrink: 0;
    border: 0;
    background: transparent;
    color: var(--color-text-secondary);
    font-size: 22px;
    line-height: 1;
    cursor: pointer;
    padding: 0 0.25em;
}

.update-banner-close:hover {
    color: var(--color-text);
}

.search-wrapper {
    margin: 0 auto;
    max-width: 600px;
    width: 100%;
}

#term {
    background: var(--color-surface);
    width: 100%;
    padding: 1em;
    max-width: 600px;
    box-shadow: 0px 5px 10px 0px var(--color-shadow);
    border: 0px transparent;
    box-sizing: border-box;
    border-radius: 4px;
}

#render-area {
    margin: 0 auto;
    margin-top: 1em;
    width: 100%;
    max-width: 600px;
}

.result {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
}

.english-result,
.japanese-result {
    background-color: var(--color-surface);
    box-shadow: 0px 2px 4px 0px var(--color-shadow);
    margin: 2px 0;
    -webkit-transition: all 300ms;
    transition: all 300ms;
}

.result div:hover {
    box-shadow: 0px 4px 4px 0px var(--color-shadow);
}

.english-result {
    margin-right: 1px;
}

#priority a,
#results a {
    color: var(--color-text);
    text-decoration: none;
    width: 100%;
}

.result div {
    padding: 1em;
}

#content {
    max-width: 600px;
    width: 100%;
    margin: 1em auto;
    color: var(--color-text-secondary);
    margin-top: 2em;
}

#content .container {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
        -ms-flex-pack: justify;
            justify-content: space-between;
}

.left-description {
    margin-right: 1em;
}

.sagumi {
    overflow: hidden;
    min-width: 150px;
}

.sagumi img {
    width: 150px;
}

.speech-bubble {
    position: relative;
    background: var(--color-surface);
    border-radius: 10px;
    padding: 1em;
    z-index: 20;
}

.speech-bubble:after {
    content: ' ';
    position: absolute;
    width: 0;
    height: 0;
    right: -2em;
    top: 50px;
    border: 20px solid;
    border-color: transparent transparent var(--color-surface) var(--color-surface);
    z-index: 10;
}

#alert {
    display: none;
    border: 1px transparent solid;
    margin-top: 2em;
}

.speech-bubble br {
    display: none;
} 

@media (max-width: 600px) {
    .update-banner,
    .search-wrapper,
    nav .container,
    #content,
    #render-area {
        width: 90%;
    }
    .sagumi {
        min-width: 90px;
    }
    .sagumi img {
        width: 90px;
    }
    .speech-bubble br {
        display: block;
    }
}

